fix flickering scrollbar

--- a/src-web/style.css
+++ b/src-web/style.css
@@ -14,6 +14,19 @@ body {
     background: #2c2f3e;
 }
 
+.hide-scrollbar {
+    /* Hide scrollbar for IE, Edge and Firefox */
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.hide-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
 hr {
     margin: 0;
 }
@@ -27,16 +40,6 @@ hr {
     left: 0;
     overflow-x: hidden;
     border-right: 1px solid white;
-    /* Hide scrollbar for IE, Edge and Firefox */
-    -ms-overflow-style: none;
-    /* IE and Edge */
-    scrollbar-width: none;
-    /* Firefox */
-}
-
-/* Hide scrollbar for Chrome, Safari and Opera */
-#sidebar::-webkit-scrollbar {
-    display: none;
 }
 
 #sidebar button {
